<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/edit_user"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_print_receipt"
            android:icon="@drawable/ic_receipt"
            android:title="@string/nav_receipt" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_complaint"
                android:icon="@drawable/ic_report"
                android:title="@string/nav_complaint" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
