<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edituser"
    android:background="@color/graylight"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="294dp">

        <RelativeLayout
            android:id="@+id/picturename_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/cerclebackgroundwhite" />

            <Button
                android:id="@+id/Editprofilepicbutton"
                android:onClick="EditProfilePic"
                android:layout_width="120dp"
                android:layout_marginTop="-30dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:text="@string/emailEditprofile"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:background="@color/transparent"/>

            <EditText
                android:id="@+id/mob_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_no_main"
                android:textColor="@color/ColorWhite"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_below="@+id/profile_image"/>


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_layout"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_below="@id/picturename_layout"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="185dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prof_commute"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/prof_commute_no"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="185dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prof_points"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/prof_points_no"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/editArea_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_below="@id/cardview_layout">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_email"
                android:tint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/user_email"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_location"
                android:tint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/user_town"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:hint="@string/townhint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                android:tint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/user_name"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:hint="@string/userNameHint"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/user_update_button"
            android:onClick="update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />
    </LinearLayout>


</LinearLayout>